# zex-assetman-sol

./: .env.example  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/zex-assetman-sol/: Cargo.toml
programs/zex-assetman-sol/src/: ed25519.rs  lib.rs
tests/: utils.ts  zex-assetman-sol.ts
